ref #45
update swagger /POST
TDD for reports_controller

I renammed SharedOccurrencesController to ReportsController because I created a JOIN table called SharedOccurrences between Reports and Occurrences. This makes more sense to me.

I made the 'expiration_date' optionnal. The default value is 2 weeks from now.

I added the gem rspec-sidekiq: https://github.com/philostler/rspec-sidekiq
To test the sidekiq jobs
